--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <div class="classroom">
+        <div class="screen">SCREEN</div>
+        <div id="classroom-container"></div>
     </div>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
     <button id="rearrangeButton" class="floating-button">자리 재배치</button>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
