--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,7 @@ body {
     background-color: #dfe4ea;
     border: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     border-radius: 5px;
     font-size: 20px;
@@ -58,51 +58,51 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
 }
 
-.floating-button {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+input[type="text"] {
+    width: 50%;
+    font-size: 20px;
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+    border: 0 solid #ccc;
+    border-radius: 8px;
 }
 
-.buttons {
-    margin: 10%;
-    text-align: center;
+button {
+    padding: 5px 10px;
+    background-color: #29323c;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #606060;
 }
 
 .floating-button {
     position: fixed;
-    bottom: 100px;
+    bottom: 8%;
     width: 200px;
+    height: 55px;
     font-size: 16px;
     font-weight: 600;
     color: #fff;
     cursor: pointer;
     margin: 20px;
-    height: 55px;
     text-align: center;
     border: none;
-    background-size: 300% 100%;
-
+    background-image: linear-gradient(to right, #29323c, #485563, #2b5876, #4e4376);
     border-radius: 50px;
-    moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
+    box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
     transition: all .4s ease-in-out;
 }
 
 .floating-button:hover {
     background-position: 100% 0;
-    moz-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
 }
 
 .floating-button:focus {
     outline: none;
-}
-
-.floating-button {
-    background-image: linear-gradient(to right, #29323c, #485563, #2b5876, #4e4376);
-    box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
 }
