--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,7 @@ button:hover {
     text-align: center;
     border: none;
     background-image: linear-gradient(to right, #29323c, #485563, #2b5876, #4e4376);
+    background-size: 300% 100%;
     border-radius: 50px;
     box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
     transition: all .4s ease-in-out;
